--- a/first/assets/css/min345.css
+++ b/first/assets/css/min345.css
@@ -182,6 +182,9 @@
         margin-top: auto;
         
     }
+    .language {
+        display: none;
+    }
     .main-skill {
         width: 90%;
         margin-top: 25px;
