--- a/first/assets/css/style.css
+++ b/first/assets/css/style.css
@@ -9,22 +9,22 @@ html {
 
 @font-face {
 	font-family: 'Gilroy-Bold';
-	src: url("assets/fonts/fonts/gilroy-bold.eot"); /* IE 9 Compatibility Mode */
-	src: url('assets/fonts/fonts/gilroy-bold.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-		url('assets/fonts/fonts/gilroy-bold.woff2') format('woff2'), /* Super Modern Browsers */
-		url('assets/fonts/fonts/gilroy-bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-		url('assets/fonts/fonts/gilroy-bold.ttf') format('truetype'), /* Safari, Android, iOS */
-		url('assets/fonts/fonts/gilroy-bold.svg#gilroy-bold') format('svg'); /* Chrome < 4, Legacy iOS */
+	src: url("../fonts/fonts/gilroy-bold.eot"); /* IE 9 Compatibility Mode */
+	src: url('../fonts/fonts/gilroy-bold.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+		url('../fonts/fonts/gilroy-bold.woff2') format('woff2'), /* Super Modern Browsers */
+		url('../fonts/fonts/gilroy-bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+		url('../fonts/fonts/gilroy-bold.ttf') format('truetype'), /* Safari, Android, iOS */
+		url('../fonts/fonts/gilroy-bold.svg#gilroy-bold') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
 @font-face {
 	font-family: 'Gilroy-Medium';
-	src: url('assets/fonts/fonts/gilroy-medium.eot'); /* IE 9 Compatibility Mode */
-	src: url('assets/fonts/fonts/gilroy-medium.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-		url('assets/fonts/fonts/gilroy-medium.woff2') format('woff2'), /* Super Modern Browsers */
-		url('assets/fonts/fonts/gilroy-medium.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-		url('assets/fonts/fonts/gilroy-medium.ttf') format('truetype'), /* Safari, Android, iOS */
-		url('assets/fonts/fonts/gilroy-medium.svg#gilroy-medium') format('svg'); /* Chrome < 4, Legacy iOS */
+	src: url('../fonts/fonts/gilroy-medium.eot'); /* IE 9 Compatibility Mode */
+	src: url('../fonts/fonts/gilroy-medium.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+		url('../fonts/fonts/gilroy-medium.woff2') format('woff2'), /* Super Modern Browsers */
+		url('../fonts/fonts/gilroy-medium.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+		url('../fonts/fonts/gilroy-medium.ttf') format('truetype'), /* Safari, Android, iOS */
+		url('../fonts/fonts/gilroy-medium.svg#gilroy-medium') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
 
