--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -45,6 +45,8 @@ section {
     padding: 50px 0;
 }
 
+
+
 .container {
     max-width: 1300px;
     margin: 0 auto;
@@ -196,10 +198,24 @@ section {
     transition: 0.5s;
 }
 
-.multiple-items {
+
+
+.swiper {
+    width: 1300px;
+    height: 250px;
     margin-top: 100px;
     padding: 10px 0;
+  }
+
+.swiper1{
+    width: 1300px;
+    height: 400px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    padding: 10px 0;
 }
+
+
 
 .match__info {
     display: flex;
