--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -50,6 +50,7 @@ section {
 .container {
     max-width: 1300px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .title {
@@ -100,7 +101,7 @@ section {
 }
 
 .main__news {
-    width: 800px;
+    max-width: 800px;
     position: relative;
     background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
     border-top-left-radius: 15px;
@@ -134,7 +135,7 @@ section {
 }
 
 .nav__news {
-    width: 800px;
+    max-width: 800px;
     height: 50px;
     background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
     border-bottom-left-radius: 15px;
@@ -156,10 +157,15 @@ section {
 }
 
 .news__all_container {
-    margin: 30px 0;
-    height: 100px;
+    margin: 20px 0;
+    height: 120px;
     width: 100%;
     display: flex;
+}
+
+.news__all_container:hover {
+    background-color: rgb(59, 59, 221);
+    transition: 0.4s;
 }
 
 .news__all_img {
@@ -176,7 +182,7 @@ section {
     display: flex;
     flex-direction: column;
     text-align: left;
-    padding: 0 10px;
+    padding: 10px 5px 0 10px;
 }
 
 
@@ -188,7 +194,7 @@ section {
     background: #1A50BA;
     border-radius: 15px;
     height: 200px;
-    width: 400px;
+    max-width: 400px;
     margin: 0 30px;
     padding: 20px 20px;
 }
@@ -201,14 +207,13 @@ section {
 
 
 .swiper {
-    width: 1300px;
-    height: 250px;
+    MAX-width: 1300px;
+    height: 270px;
     margin-top: 100px;
     padding: 10px 0;
   }
 
 .swiper1{
-    width: 1300px;
     height: 400px;
     margin-top: 100px;
     margin-bottom: 50px;
