--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -49,6 +49,7 @@ section {
 
 .container {
     max-width: 1300px;
+    padding: 0 30px;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -97,15 +98,22 @@ section {
 
 .news {
     display: flex;
-    justify-content: space-between;
+    height: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .main__news {
+    height: 100%;
     max-width: 800px;
+    
     position: relative;
     background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    margin-right: 30px;
 
 }
 
@@ -119,10 +127,18 @@ section {
     padding: 15px 50px;
     font-size: 24px;
     text-align: left;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     
 }
 
+.img__news {
+    height: 100%;
+
+}
+
 .img__news-block {
+    height: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
@@ -130,6 +146,8 @@ section {
 .picture__news {
     height: 100%;
     width: 100%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
@@ -194,7 +212,6 @@ section {
     background: #1A50BA;
     border-radius: 15px;
     height: 200px;
-    max-width: 400px;
     margin: 0 30px;
     padding: 20px 20px;
 }
@@ -377,4 +394,69 @@ footer {
 
 .instagram, .youtube, .vk {
     margin: 0 20px;
+}
+
+
+
+@media (max-width: 1025px) {
+
+    .news {
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .first__block {
+        width: 100%;
+    }
+
+    .main__news {
+        height: 100%;
+        width: 100%;
+        max-width: 100%;
+        min-width: 100%;
+        position: relative;
+        background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+        margin-right: 30px;
+       
+    
+    }
+    
+
+    
+
+    
+
+    .all__news {
+        margin-top: 40px;
+        padding: 30px;
+        width: 100%;
+        background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+        border-radius: 15px;
+    }
+    
+
+    
+}
+
+
+@media (max-width: 780px) {
+
+    section {
+        padding: 30px 0;
+    }
+
+    .title {
+        font-size: 40px;
+    }
+
+    .table {
+        width: 100%;
+    }
+
 }
