--- a/voleyboll/css/statistics.css
+++ b/voleyboll/css/statistics.css
@@ -1,9 +1,6 @@
 
 
 
-.container {
-    padding: 0 30px;
-}
 
 
 .statistics__container {
@@ -46,6 +43,22 @@ th,td {
 td {
     font-size: 18px;
     padding: 20px 40px;
+}
+
+.swiper3{
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    padding: 10px 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    list-style: none;
+    overflow: hidden;
+    padding: 0;
+    z-index: 1;
 }
 
 
