--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -176,7 +176,7 @@ section {
 
 .news__all_container {
     margin: 20px 0;
-    height: 120px;
+    height: 110px;
     width: 100%;
     display: flex;
 }
@@ -188,19 +188,21 @@ section {
 
 .news__all_img {
     height: 100%;
-    width: 150px
+    overflow: hidden;
 }
 
 .news__picture {
-    height: 100%;
-    width: 150px;
-    object-fit: cover;
+   width: 90%;
+
+   
+
 }
 .news_all_info {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     text-align: left;
-    padding: 10px 5px 0 10px;
+    padding: 10px 0 10px 0;
 }
 
 
@@ -396,6 +398,50 @@ footer {
     margin: 0 20px;
 }
 
+.mobile__header {
+    display: none;
+    background-color: rgba(19, 19, 182, 0.8)
+}
+
+.mobile__header-menu {
+    transition: 0.2s;
+    top: -1500px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(19, 19, 182, 0.8)
+}
+
+.active {
+    top: 0;
+    position: fixed;
+    
+}
+
+.swiper2{
+    height: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    padding: 10px 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    list-style: none;
+    overflow: hidden;
+    padding: 0;
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 1025px) {
@@ -447,6 +493,38 @@ footer {
 
 @media (max-width: 780px) {
 
+    .swiper3{
+        height: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 10px 0;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        list-style: none;
+        overflow: hidden;
+        padding: 0;
+        z-index: 1;
+    }
+
+    .swiper2{
+        height: 100%;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        padding: 10px 0;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        list-style: none;
+        overflow: hidden;
+        padding: 0;
+        z-index: 1;
+    }
+    
+
     section {
         padding: 30px 0;
     }
@@ -459,4 +537,151 @@ footer {
         width: 100%;
     }
 
+    .header {
+        display: none;
+    }
+
+    .mobile__header {
+        display: block;
+    }
+
+    .mobile__header .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .burger__container {
+        position: relative;
+        margin-right: 35px;
+    }
+    .mobile__header-burger {
+        position: absolute;
+        z-index: 11;
+    }
+
+    .mobile__header-burger span {
+        position: absolute;
+        height: 6px;
+        left: 0;
+        width: 45px;
+        background-color: rgb(17, 17, 128);
+    }
+    .mobile__header-burger span::before {
+        content: '';
+        position: absolute;
+        height: 6px;
+        left: 0;
+        top: -12px;
+        width: 45px;
+        background-color: rgb(17, 17, 128);
+        color: rgb(17, 17, 128);
+    }
+    .mobile__header-burger span::after {
+        content: '';
+        position: absolute;
+        height: 6px;
+        top: 12px;
+        left: 0;
+        width: 45px;
+        background-color: rgb(17, 17, 128);
+        color: rgb(17, 17, 128);
+    }
+
+
+    
+  
+
+    .mobile_menu {
+        margin: 0 auto;
+        height: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    
+    .mobile_menu__ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .mobile_menu__li:hover{
+        transition: 0.2s;
+        border-bottom: 3px solid sandybrown;
+    }
+    
+    .mobile_menu__li {
+        margin-top: 15px;
+        padding: 5px 20px;
+        font-size: 24px;
+    }
+
+    .mobile__header-menu {
+        transition: 1s;
+    }
+
+    
+}
+
+@media (max-width: 500px) {
+    .swiper-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        display: flex;
+        transition-property: transform;
+        box-sizing: content-box;
+    }
+
+    .swiper2{
+        height: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 10px 0;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        list-style: none;
+        overflow: hidden;
+        padding: 0;
+        z-index: 1;
+    }
+    
+
+    
+} 
+
+@media (max-width: 430px) {
+    .container {
+        padding: 0 15px;
+    }
+    .title__news {
+        height: unset;
+        font-size: 16px;
+        padding: 15px;
+    }
+    .name {
+        font-size: 22px;
+    }
+    .news__all_container {
+        margin: 20px 0;
+        display: flex;
+        height: 100px;
+        align-items: center;
+    }
+
+
+   
+
+
+    .all__news {
+        padding: 30px 15px;
+    }
+
+  
 }
