--- a/voleyboll/css/team.css
+++ b/voleyboll/css/team.css
@@ -1,7 +1,4 @@
 
-.container {
-    padding: 0 30px;
-}
 
 .our__team-container {
     height: 250px;
@@ -69,3 +66,43 @@
     margin-left: 0;
 }
 
+@media (max-width: 430px) {
+   
+
+    .our__team-container {
+        height: 100%;
+        margin-top: 40px;
+        background-color: #1A50BA;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        padding: 20px 50px;
+        justify-content: unset;
+        align-items: center;
+    }
+    
+    .bot__line {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        text-align: left;
+        line-height: 25px;
+    }
+
+    .bot__line span {
+        margin: 0;
+    }
+    
+    .bot__line span:first-child{
+        margin-left: 0;
+    }
+
+    .capabilities {
+        display: flex;
+        padding-right: 20%;
+        justify-content: space-between;
+    }
+
+ 
+  
+}
