--- a/voleyboll/css/style.css
+++ b/voleyboll/css/style.css
@@ -108,7 +108,7 @@ section {
     max-width: 800px;
     
     position: relative;
-    background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+    background: #1A50BA;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
@@ -163,7 +163,7 @@ section {
 .all__news {
     padding: 30px;
     width: 400px;
-    background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+    background: #1443a0;
     border-radius: 15px;
 }
 
@@ -206,7 +206,9 @@ section {
 }
 
 
-
+.date {
+    color:#84adfd;
+}
 
 
 
@@ -463,7 +465,7 @@ footer {
         max-width: 100%;
         min-width: 100%;
         position: relative;
-        background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+       
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
         border-bottom-left-radius: 15px;
@@ -477,7 +479,7 @@ footer {
         margin-top: 40px;
         padding: 30px;
         width: 100%;
-        background: linear-gradient(35.48deg, rgba(225, 225, 225, 0.8) -62.7%, rgba(76, 122, 213, 0.8) 17.8%, rgba(15, 56, 137, 0.8) 83.66%);
+     
         border-radius: 15px;
     }
     
@@ -568,6 +570,19 @@ footer {
         display: none;
     }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
     .mobile__header {
         display: block;
     }
@@ -616,9 +631,6 @@ footer {
     }
 
 
-    
-  
-
     .mobile_menu {
         margin: 0 auto;
         height: 80%;
@@ -651,9 +663,63 @@ footer {
     }
 
     
+
+ @media (max-width: 600px) {
+
+    .news__all_container {
+        margin: 20px 0;
+        height: 110px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .news__all_container:hover {
+        background-color: rgb(59, 59, 221);
+        transition: 0.4s;
+    }
+    
+    .news__all_img {
+        height: 100%;
+        width: 35%;
+        overflow: hidden;
+    }
+    
+    .news__picture {
+       width: 100%;
+    
+       
+    
+    }
+    .news_all_info {
+        width: 65%;       
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        text-align: left;
+        padding: 10px 10px 10px 10px;
+    }
+    
+ }
+
+
+
+
 }
 
 @media (max-width: 500px) {
+
+
+
+    header {
+        padding: 10px 5px;
+    }
+
+    .mobile__header .container {
+        padding-left: 0;
+        padding-right: 20px;
+    }
+
     .swiper-wrapper {
         position: relative;
         width: 100%;
@@ -704,7 +770,14 @@ footer {
     }
 
 
-   
+    .news_all_info {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        text-align: left;
+        height: 100%;
+        padding: 0 10px 0 10px;
+    }
 
 
     .all__news {
@@ -712,4 +785,90 @@ footer {
     }
 
   
+}
+
+@media (max-width: 376px) {
+    .photo__img {
+
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+
+    }
+   
+    .swiper, .swiper1 {
+        margin-top: 50px;
+    }
+
+    section {
+        padding: 20px 0;
+    }
+
+}
+
+
+@media (max-width: 321px) {
+
+    .mobile__header .container {
+        padding-left: 0;
+        padding-right: 10px;
+    }
+    .logo {
+        width: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .logo img {
+        width: 90%;
+
+    }
+
+    .name {
+        font-size: 16px;
+        width: 100px;
+    }
+
+    .mobile__header-burger span {
+        width: 35px;
+        height: 5px;
+
+    }
+
+    .mobile__header-burger span::before{
+        height: 5px;
+        width: 35px;
+        top: -10px;
+
+    }
+
+    .mobile__header-burger span::after {
+        width: 35px;
+        height: 5px;
+        top: 10px;
+    }
+
+    .news__all_container {
+        margin: 10px 0 20px 0;
+        display: flex;
+        height: 120px;
+        align-items: center;
+
+    }
+
+    .news__all_img {
+        display: none;
+    }
+
+    .news_all_info {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .all__news_titles {
+        margin-bottom: 20px;
+        padding: 0 10px;
+    }
 }
