--- a/css/one_page.css
+++ b/css/one_page.css
@@ -50,3 +50,12 @@
     
 }
 
+@media (max-width: 540px){
+    .one__block-inner {
+        padding: 20px;
+        padding-top: 10px;
+    }
+    .one__block-date, .one__block-title, .one__block-text {
+        margin-bottom: 20px;
+    }
+}
