--- a/css/documents.css
+++ b/css/documents.css
@@ -6,7 +6,7 @@
 .documents__block {
     padding: 20px 30px;
     display: flex;
-    height: 70px;
+    height: 80px;
     max-width: 100%;
     margin-top: 20px;
     text-align: left;
@@ -19,7 +19,8 @@
 
 .documents__block-img {
     height: 100%;
-    
+    display: flex;
+    align-items: center;
 }
 
 .documents__block-img img{
@@ -35,4 +36,25 @@
 .documents__block-date {
     margin-left: auto;
     padding: 0 10px;
+}
+
+@media (max-width: 500px) {
+    .documents__block {
+        padding: 20px 10px;
+
+    }
+    .documents__block-name {
+        margin-left: 10px;
+        font-size: 14px;
+        max-width: 450px;
+        padding: 0 0;
+    }
+    .documents__block-date {
+        font-size: 14px;
+     
+    }
+    .documents__block-img img{
+        height: 70%;
+    }
+    
 }
