--- a/css/news.css
+++ b/css/news.css
@@ -1,9 +1,11 @@
 
 
 .news {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-around;
+    grid-gap: 15px;
+    margin-bottom: 50px;
 }
 .news__block {
     background-color: #4827c0;
@@ -42,7 +44,31 @@
 }
 .news__block-img img {
     margin: 0 auto;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
+@media (max-width: 1024px){
+    .news__block {
+    background-color: #4827c0;
+    min-height: 600px;
+    height: 100%;
+    max-width: 450px;
+    border-radius: 15px;
+    margin-top: 20px;
+}
+    .news {
+        grid-template-columns: 1fr 1fr ;
+        justify-content: center;
+        justify-items: center;
+        grid-gap: 15px;
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 767px) {
+    .news {
+        grid-template-columns: 1fr ;
+    }
+}
