--- a/assets/css/adaptive.css
+++ b/assets/css/adaptive.css
@@ -1,418 +1,334 @@
-@media (max-width: 780px) {
+@media (max-width: 1600px) {
+    .popular-block{
+        width: 21%;
+        height: 500px;
+    }
+    .popular-block__img img {
+        width: 100%;
+        height: 400px;
+        border-radius: 10%;
+        box-shadow: -20px 0 20px rgba(133, 133, 133, 0.4);
+    }
 
-.up_scroll {
-    position: fixed;
-    transition: 1s;
-    bottom: 30px;
-    right: 30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-image: url(/assets/image/up_scroll.svg);
-    background-repeat: no-repeat;
-    background-size: 50%;
-    background-position: center;
-    box-shadow: 0px 0px 25px 4px rgba(0, 0, 0, 0.25);
+    .popular {
+        background-size: cover;
+    }
+    .famous-authors {
+        background-size: cover;
+    }
 }
+@media (max-width: 1440px) {
+    .title {
+        font-size: 46px;
+    }
+    .popular-block{
+        width: 23%;
+        height: 500px;
+    }
+    .popular-block__img img {
+        width: 100%;
+        height: 400px;
+        border-radius: 10%;
+        box-shadow: -20px 0 20px rgba(133, 133, 133, 0.4);
+    }
+}
+
+
+@media (max-width: 1200px) {
+    
     
 
-/* -------------------HEADER------------------- */
+    .title {
+        font-size: 36px;
+    }
 
-.span_container {
-    padding: 0 30px;
+    .header {
+        width: 98%;
+        justify-content: unset;
+        padding: 10px 1%;
+    }
+    .header__img img {
+        width: 100%;
+    }
+    .search-form {
+        margin-left: 5%;
+    }
+
+    .recomendation-slider {
+        margin-bottom: 50px;
+    } 
+
+
+
+    .popular-block{
+        width: 30%;
+        height: 500px;
+    }
+    .popular-block__img img {
+        width: 100%;
+        height: 420px;
+        border-radius: 10%;
+        box-shadow: -20px 0 20px rgba(133, 133, 133, 0.4);
+    }
+
+
+
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer .content_block{
+        width: 50%;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    .footer-social, .footer-contact {
+        margin-bottom: 5%;
+    }
+     .social_icon {
+        align-items: center;
+    }
 }
 
-.course {
-    margin-left: 30px;
-}
+@media (max-width: 1024px) {
+    .title {
+        font-size: 28px;
+    }
+    .header_burger {
+        display: block;
+    }
+    .mobile_menu {
+        height: 100%;
+        width: 100%;
+        background-color: rgba(235, 235, 235, 0.8);
+        position: fixed;
+        display: flex;
+        align-items: center;
+        z-index: 1000;
+        font-weight: 700;
+        font-size: 24px;
+        top: -2000px;
+        transition: all 0.5s;
+    }
+    .burger-container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1000;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .header__menu-mobile ul li a{
+        color: black;
+        transition: all 0.2s;
+        text-decoration: none;
+        position: relative;
+    }
+    .header__menu-mobile ul li{
+        margin-bottom: 30px;
+    }
+    .header__menu-mobile ul li:last-child{
+        margin-bottom: 0
+    }
+    .search_form-mobile {
+        display: flex;
+        margin-bottom: 30px;
+    }
+    .search_form-mobile .search-from__input{
+        background-color: rgba(255, 255, 255, 0.671);
+        margin-right: 10px;
+        padding: 10px 10px;
+    }
+    .search_form-mobile .search-from__button{
+        margin: auto 0;
+    }
+        
+    .show {
+        top: 0;
+    }
 
-.teacher_button {
-    border-radius: 143px;
-    margin-right: 45px;
-}
+    .active {
+        position: fixed;
+        top: 50px;
+        z-index: 1000;
+        right: 50px;
+    }
 
-/* ------------------------------------------- */
+ 
 
-
-/* ------------prewiew section---------------- */
-
-.prewiew_content {
-    flex-direction: column-reverse;
-}
-
-.prewiew_text_container {
-    margin: 0 auto;
-    text-align: center;
-}
-.image-container {
-    width: 250px;
-    margin: 0 auto;
-}
-
-/* ---------------------------------------------- */
-
-
-/* ---------------------- SKILLS SECTION ---------------------- */
-
-.skills_container {
-    margin-top: 50px;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
-}
-
-.skills_item {
-    max-width: 230px;
-    margin: 0 30px;
-    margin-top: 50px
-}
-
-/* ------------------------------------------- */
-
-
-/* ------------------ US LEARN SECTION ------------------ */
-
-.us_learn_text_container {
-    margin: 0 auto;
-}
-
-.us_learn_content {
-    flex-direction: column-reverse;
-    text-align: center;
-}
-
-.image_container {
-    max-width: 250px;
-    margin: 0 auto;
-}
-
-/* ------------------------------------------- */
-
-
-/*-------------------- GET START ---------------------------- */
-
-.get_start_block_container {
-    padding: 0 15%;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-/* ------------------------------------------- */
-
-
-/* ---------------- FOOTER ------------------- */
-
-.footer  .container {
-    flex-direction: column;
-    justify-content: center;
-}
-
-.footer span {
-    margin: 0 auto;
-    margin-top: 50px;
-}
-
-/* ------------------------------------------- */
-
-}
-
-@media (max-width: 650px){
-
-/* -------------------HEADER------------------- */
-
-.header {
-    padding: 36px 30px;
-    margin: 0 auto;
-}
-
-.span_container {
-    padding-left: 0;
-}
-
-.button_and_login {
-    display: none;
-}
-
-.course {
-    display: none;
-}
-
-.header_burger_button {
-    display: block;
-    position: relative;
-    height: 30px;
-    width: 50px;
-}
-
-.header_burger_button span {
-    transition: 1s;
-    position: absolute;
-    content: '';
-    background-color: black;
-    color: black;
-    width: 40px;
-    height: 5px;
-    top: 12px;
-}
-
-.header_burger_button.active span{
-    transition: 1s;
-    display: none;
-}
-
-.header_burger_button::before {
-    position: absolute;
-    content: '';
-    background-color: black;
-    transition: 0.8s;
-    color: black;
-    width: 40px;
-    height: 5px;
-    top: 0;
-}
-
-.header_burger_button::after{
-    position: absolute;
-    content: '';
-    transition: 1s;
-    background-color: black;
-    color: black;
-    width: 40px;
-    height: 5px;
-    bottom: 0;
-}
-
-.header_burger_menu {
-    transition: 1s;
-    top: -2000px;
-    padding-top: 30px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-}
-
-.burger_menu_container {
-    display: flex;
-    justify-content: center;
-    height: 90%;
-    width: 90%;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 0 auto;
-    box-sizing: border-box;;
-}
-
-.burger_title {
-    text-align: center;
-    font-size: 34px;
-    margin-bottom: 50px;
-    line-height: 28px;
-}
-
-.burger_item_link {
-    text-align: center;
-    margin-top: 30px;
-    text-decoration: none;
-    color: black;
-    display: block;
-    font-size: 28px;
-    line-height: 28px;
-    border-bottom: 1px solid #262FFF;
-    padding-bottom: 20px;
-}
-
-.active {
-    top: 0;
-    position: fixed;
-}
-
-.button_active {
-    transition: 0.8s;
-}
-
-.button_active span {
-    display: none;
-    transition: 1s;
-}
-
-.button_active::after{
-    transition: 1s;
+   .active .burger-container span:nth-of-type(1) {
+        transform: rotate(45deg);
+   }
+   .active .burger-container span:nth-of-type(2) {
     transform: rotate(45deg);
-    top: 1px
+}
+    .active .burger-container span:nth-of-type(3) {
+        transform: rotate(45deg);
+    }
+    .burger-container span {
+        transition: all 0.5s;
+    }
+
+    .header .content{
+        justify-content: space-between
+    }
+    .header__menu {
+        display: none;
+    }
+    .header_logoMenu {
+        width: 15%;
+    }
+    .header-logo {
+        width: 100%;
+    }
+    .search-form {
+        margin-left: 0;
+        display: none;
+    }
+
+    .swiper {
+        height: 600px;
+    }
+    .recomendation-slider__element {
+        width: 250px;
+        height: 60%;
+    }
+
+
+    .popular-block{
+        width: 30%;
+        height: 500px;
+    }
+    .popular-block__img img {
+        width: 100%;
+        height: 380px;
+        border-radius: 10%;
+        box-shadow: -20px 0 20px rgba(133, 133, 133, 0.4);
+    }
+
+    
+
+    .famous-authors .content_block {
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .famous-authors__block{
+        width: 35%;
+    }
 }
 
-.button_active::before {
-    transition: 1s;
-    bottom: 1px;
-    transform: rotate(-45deg);
+@media (max-width: 900px) {
+    .recomendation-title {
+        font-size: 42px;
+    }
+    .recomendation-title::before, .recomendation-title::after{
+        display: none;
+    }
+
+    .popular .content_block {
+        display: flex;
+        margin: 0 auto;
+        width: 100%;
+        align-items: center;
+    }
+    .popular-block {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+        width: 35%;
+        height: 460px;
+    }
+
+    .popular-block__img img{
+        height: 340px;
+    }
+    .popular-block__info {
+        margin-top: 0;
+    }
+
+    .famous-authors .content_block {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: unset;
+    }
+    .famous-authors__block{
+        width: 60%;
+        margin-bottom: 100px;
+    }
 }
 
-/* ------------------------------------------- */
-
-
-/* ------------- US LEARN SECTION ------------ */
-
-.us_learn_text_container p {
-    text-align: left;
+@media (max-width: 500px) {
+    .title {
+        font-size: 18px;
+    }
+    .swiper {
+        height: 500px;
+    }
+    .recomendation-title {
+        font-size: 32px;
+    }
+    .header {
+        margin-bottom: 30px;
+    }
+    .header_logoMenu {
+        width: 25%;
+    }
+    .popular .content_block {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        width: 100%;
+        align-items: center;
+    }
+    
+    .popular-block {
+        width: 60%;
+        margin: 0 auto;
+        height: 450px;
+        margin-bottom: 30px;
+    }
+    .popular-block__img img{
+        height: 300px;
+    }
+    .famous-authors .content_block {
+        margin: 0;
+    }
+    .popular-block__img {
+        margin-bottom: 20px;
+    }
+    .famous-authors__block{
+        width: 100%;
+        margin-bottom: 100px;
+    }
+    .footer .content_block {
+        width: 100%;
+        padding: 30px 0;
+    }
+    .footer .content {
+        display: flex;
+        justify-content: center;
+    }
+    
 }
 
-/* ------------------------------------------- */
-
-
-/* ---------------- GET START ---------------- */
-
-.get_start_block_container {
-    padding: 0 5%;
-    justify-content: center;
-}
-
-.get_start_block {
-    margin-bottom: 60px;
-    min-width: 95%;
-    padding: 25px 10px;
-    border-radius: 25px;
-    font-size: 28px;
-}
-
-.start {
-    margin-top: 20px;
-    padding: 15px 65px;
-    border-radius: 25px;
-    border: none;
-    font-size: 24px;
-}
-
-.block_title{
-    max-width: 200px;
-}
-
-/* ------------------------------------------- */
-
-}
-
-@media (max-width: 420px){
-
-/* -------------------HEADER------------------- */
-
-.header {
-    margin: auto;
-}
-
-.burger_menu_container {
-    justify-content: unset;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 10px;
-    margin: auto;
-}
-
-.burger_title {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.burger_item_link {
-    font-size: 24px;
-}
-
-/* ------------------------------------------- */
-
-
-/* ------------prewiew section---------------- */
-
-.prewiew_content {
-    flex-direction: column;
-}
-
-.prewiew_text_container {
-    text-align: unset;
-}
-
-.prewiew_text_container h1 {
-    font-size: 36px;
-    line-height: 42px;
-    text-align: unset;
-}
-
-.prewiew_text_container p {
-    font-size: 18px;
-    line-height: 28.2px;
-}
-.image-container {
-    margin-top: 50px;
-}
-
-/* ------------------------------------------- */
-
-
-/* ------------ US LEARN SECTION ------------- */
-
-.us_learn_text_container {
-    margin: 0 auto;
-}
-
-.us_learn_content {
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-.us_learn_text_container p{
-    font-size: 18px;
-}
-
-.us_learn_title {
-    text-align: left;
-    font-size: 36px;
-}
-
-.image_container {
-    max-width: 250px;
-    margin: 0 auto;
-    margin-top: 50px;
-}
-
-
-/* ------------------------------------------- */
-
-
-/* -------------- GET START ------------------ */
-
-.get_start_block_container {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    height: 100%;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.get_start_block {
-    margin-bottom: 60px;
-    padding: 25px 10px;
-    border-radius: 25px;
-    font-size: 24px;
-    width: 100%;
-    min-width: unset;
-    letter-spacing: 0.1em;
-}
-
-.start {
-    margin-top: 20px;
-    padding: 10px 45px;
-    border-radius: 25px;
-    border: none;
-    font-size: 18px;
-}
-
-/* ------------------------------------------- */
-
-.footer .container {
-    padding: 0 10px;
-}
-
+@media (max-width: 375px) {
+    .popular-block {
+        width: 60%;
+        margin: 0 auto;
+        height: 330px;
+        margin-bottom: 30px;
+    }
+    .popular-block__info span{
+        font-size: 18px;
+    }
+    .popular-block__img img{
+        height: 250px;
+    }
 }
